[package]
name = "isucari"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version="0.3", default-features = false, features = ["runtime-tokio", "mysql"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
actix-web = "2.0"
anyhow = "1.0"
actix-rt = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.2.2"
